[package]
name = "RustFlyff"
version = "0.1.0"
authors = ["bgxjordan"]
edition = "2018"

[dependencies]
server_common = { path = "server_common" }

async-trait = "0.1.36"
bytes = "0.5"
futures = "0.3.5"
tokio = { version = "0.2", features = ["rt-threaded", "net", "tcp", "macros", "stream", "test-util"] }
tokio-util = { version = "0.3", features = ["codec"] }
# uuid = { version = "0.8", features = ["v4"] }

[workspace]
members = [
"server_common"
]

[[bin]]
name = "1_database_server"
path = "src/bin/database_server/main.rs"

[[bin]]
name = "2_login_server"
path = "src/bin/login_server/main.rs"

[[bin]]
name = "3_cluster_server"
path = "src/bin/cluster_server/main.rs"

[[bin]]
name = "4_world_server"
path = "src/bin/world_server/main.rs"